# gdriver

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
apps/gdriver-app/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/gdriver-app/src/: App.tsx  main.tsx  styles.css
apps/gdriver-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/gdriver-app/src-tauri/capabilities/: default.json
apps/gdriver-app/src-tauri/icons/: icon.icns
apps/gdriver-app/src-tauri/src/: commands.rs  daemon_client.rs  lib.rs  main.rs  tray.rs
apps/gdriver-app/src/__tests__/onboarding/: navigation.test.ts
apps/gdriver-app/src/__tests__/store/: accountStore.test.ts  appStore.test.ts  syncStore.test.ts  themeStore.test.ts
apps/gdriver-app/src/__tests__/theme/: useTheme.test.ts
apps/gdriver-app/src/components/: DriveLogo.tsx
apps/gdriver-app/src/components/account/: AccountCard.tsx  AccountPreferences.tsx
apps/gdriver-app/src/components/dialogs/: AboutDialog.tsx  ErrorListDialog.tsx  FeedbackDialog.tsx  OfflineFilesDialog.tsx  PreferencesDialog.tsx
apps/gdriver-app/src/components/layout/: MainLayout.tsx  OnboardingLayout.tsx  Sidebar.tsx  TopBar.tsx
apps/gdriver-app/src/components/ui/: button.tsx  dialog.tsx
apps/gdriver-app/src/hooks/: useDaemonEvents.ts  useTheme.ts
apps/gdriver-app/src/i18n/: index.ts
apps/gdriver-app/src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json  zh-TW.json
apps/gdriver-app/src/lib/: constants.ts  formatSize.ts  formatTime.ts  statusColors.ts  urls.ts
apps/gdriver-app/src/routes/main/: HomePage.tsx  NotificationsPage.tsx  SyncActivityPage.tsx
apps/gdriver-app/src/routes/onboarding/: FileManagerPage.tsx  FolderSummaryPage.tsx  OfflinePage.tsx  PhotosPage.tsx  SignInPage.tsx  SyncFolderConfirmPage.tsx  SyncFolderPage.tsx  WelcomePage.tsx
apps/gdriver-app/src/store/: accountStore.ts  appStore.ts  syncStore.ts  themeStore.ts
apps/gdriver-app/src/types/: account.ts  sync.ts
crates/gdriver-api/: Cargo.toml
crates/gdriver-api/src/: auth.rs  changes.rs  client.rs  files.rs  lib.rs  photos.rs
crates/gdriver-api/tests/: file_lifecycle_integration.rs  upload_download_integration.rs
crates/gdriver-daemon/: Cargo.toml
crates/gdriver-daemon/migrations/: 20250504000000_init.sql  20250505000000_add_notifications.sql  20250506000000_add_feedback.sql
crates/gdriver-daemon/src/: main.rs
crates/gdriver-daemon/src/api/: mod.rs
crates/gdriver-daemon/src/auth/: mod.rs  token_store.rs
crates/gdriver-daemon/src/config/: mod.rs
crates/gdriver-daemon/src/db/: accounts.rs  feedback.rs  files.rs  mod.rs  notifications.rs  queue.rs  sync_errors.rs  sync_folders.rs  tokens.rs
crates/gdriver-daemon/src/ipc/: handlers.rs  mod.rs  server.rs
crates/gdriver-daemon/src/platform/: macos.rs  mod.rs  windows.rs
crates/gdriver-daemon/src/sync/: conflict.rs  deleter.rs  downloader.rs  engine.rs  incremental.rs  initial.rs  mod.rs  photos.rs  uploader.rs
crates/gdriver-daemon/src/vfs/: mod.rs
crates/gdriver-daemon/src/watcher/: mod.rs
crates/gdriver-ipc/: Cargo.toml
crates/gdriver-ipc/src/: client.rs  lib.rs  methods.rs  types.rs
crates/gdriver-ipc/tests/: extension_validation.rs  platform_compatibility.rs  protocol_integration.rs
crates/gdriver-sync/: Cargo.toml
crates/gdriver-sync/src/: conflict.rs  downloader.rs  engine.rs  lib.rs  queue.rs  uploader.rs
crates/gdriver-sync/tests/: sync_pipeline_integration.rs
crates/gdriver-vfs/: Cargo.toml
crates/gdriver-vfs/src/: backend.rs  db.rs  lib.rs  linux.rs  macos.rs  windows.rs
extensions/dolphin/: Makefile  gdriver-dolphin.desktop  gdriver_dolphin_ipc.py  gdriver_dolphin_menu.py  metadata.json
extensions/fileprovider/: Info.plist  Package.swift
extensions/fileprovider/Sources/: DaemonConnection.swift  EntryPoint.swift  FileProviderEnumerator.swift  FileProviderExtension.swift  FileProviderItem.swift
extensions/findersync/: Info.plist  Package.swift
extensions/findersync/Sources/: DaemonConnection.swift  EntryPoint.swift  FinderSync.swift  main.swift
extensions/nautilus/: Makefile  gdriver_ipc.py  gdriver_nautilus.py  metadata.json
extensions/windows-shell/: Cargo.toml  README.md  build.rs  gdriver_shell.rc  register.reg  unregister.reg
extensions/windows-shell/src/: context_menu.rs  ipc.rs  lib.rs  overlay.rs
packaging/linux/: build.sh
packaging/linux/deb/: postinst  postrm
packaging/linux/rpm/: post  postun
packaging/macos/: build.sh  notarize.sh  sign.sh
packaging/macos/entitlements/: fileprovider.entitlements  findersync.entitlements  gdriver.entitlements
packaging/windows/: build.ps1
packaging/windows/nsis/: installer.nsi
packaging/windows/signing/: sign.ps1
packaging/windows/wix/: gdriver.wxs
